--- a/index.html
+++ b/index.html
@@ -3,22 +3,46 @@
 <head>
 	<meta charset="utf-8">
 	<title>Dudú</title>
+	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-		<div class="animation-box">
-			<p class="animation-text a1">
-				LA ACTITUD Y EL PLANETA SE CUIDAN
-			</p>
-			<p class="animation-text a2">
-				LA ACTITUD Y EL PLANETA SE CUIDAN
-			</p>
+
+	<div class="animation-box">
+		<p class="animation-text a1">
+			LA ACTITUD Y EL PLANETA SE CUIDAN
+		</p>
+		<p class="animation-text a2">
+			LA ACTITUD Y EL PLANETA SE CUIDAN
+		</p>
+	</div>
+
+	<div class="logo-container">
+		<img src="/DUDU-LOGO.png" alt="logo">
+	</div>
+
+	<div class="hero">
+
+		<div>
+			<img class="hero-img" src="/dudu-cuidado-corporal.jpg" alt="Cuidado corporal">
+			<p class="img-text"> CUIDADO <br> CORPORAL </p>
 		</div>
-		
-		<img class="hero" src="bg.png">
-		<p class="p0 p1"> CUIDADO <br> CORPORAL </p>
-		<p class="p0 p2"> INDUMENTARIA </p>
-		<p class="p0 p3"> DECÓ </p>
-		
+		<div>
+			<img class="hero-img" src="/dudu-indumentaria.jpg" alt="Indumentaria">
+			<p class="img-text"> INDUMENTARIA </p>
+		</div>
+		<div>
+			<img class="hero-img" src="/dudu-decó.jpg" alt="Decó">
+			<p class="img-text"> DECÓ </p>
+		</div>
+
+	</div>
+
+	<div class="info">
+		<p> PRÓXIMAMENTE LOCAL MAYORISTA </p>
+		<p> .HELGUERA PALACE. </p>
+		<p> HELGUERA 449, FLORES </p>
+	</div>
+
 </body>
 </html>
