Responsive design added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dudú</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+	
+	<div class="logo-container">
+		<img src="./DUDU-LOGO.png" alt="logo">
+	</div>
+	
+	<div class="hero">
+		
+		<div>
+			<img class="hero-img" src="./dudu-cuidado-corporal.jpg" alt="Cuidado corporal">
+			<p class="img-text"> CUIDADO <br> CORPORAL </p>
+		</div>
+		<div>
+			<img class="hero-img" src="./dudu-indumentaria.jpg" alt="Indumentaria">
+			<p class="img-text"> INDUMENTARIA </p>
+		</div>
+		<div>
+			<img class="hero-img" src="./dudu-decó.jpg" alt="Decó">
+			<p class="img-text"> DECÓ </p>
+		</div>
+		
+	</div>
+	
+	<div class="extra-info">
+		<div class="embedsocial-hashtag" data-ref="3cfe816d9dd9dd46ab7250dfc50cc4d4b0e9ede3" ><a class="feed-powered-by-es" href="https://embedsocial.com/products/embedfeed/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
+	</div>
+	
+	<hr>
+	
+	<div class="info">
+		<p> PRÓXIMAMENTE LOCAL MAYORISTA </p>
+		<p> .HELGUERA PALACE. </p>
+		<p> HELGUERA 449, FLORES </p>
+		<iframe src="https://www.google.com.ar/maps/embed?pb=!1m18!1m12!1m3!1d3283.116475348514!2d-58.47673748505154!3d-34.62649676621022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9928187d52b%3A0x3405424743244155!2sHelguera%20449%2C%20C1406APG%20CABA!5e0!3m2!1ses!2sar!4v1616503097230!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+	</div>
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<a href="https://api.whatsapp.com/send?phone=5491133689738." class="float" target="_blank">
+		<i class="fa fa-whatsapp my-float"></i>
+	</a>
+	
+	<!--
+	<a href="https://api.whatsapp.com/send?phone=5491133689738." class="float float-text" target="_blank">
+		<p class="fa fa-whatsapp my-float">WhatsApp 11 3368 9738</p>
+	</a>
+	-->
 
 	<div class="animation-box">
 		<p class="animation-text a1">
@@ -15,45 +61,6 @@
 			LA ACTITUD Y EL PLANETA SE CUIDAN
 		</p>
 	</div>
-
-	<div class="logo-container">
-		<img src="/DUDU-LOGO.png" alt="logo">
-	</div>
-
-	<div class="hero">
-
-		<div>
-			<img class="hero-img" src="/dudu-cuidado-corporal.jpg" alt="Cuidado corporal">
-			<p class="img-text"> CUIDADO <br> CORPORAL </p>
-		</div>
-		<div>
-			<img class="hero-img" src="/dudu-indumentaria.jpg" alt="Indumentaria">
-			<p class="img-text"> INDUMENTARIA </p>
-		</div>
-		<div>
-			<img class="hero-img" src="/dudu-decó.jpg" alt="Decó">
-			<p class="img-text"> DECÓ </p>
-		</div>
-
-	</div>
-
-	<div class="info">
-		<p> PRÓXIMAMENTE LOCAL MAYORISTA </p>
-		<p> .HELGUERA PALACE. </p>
-		<p> HELGUERA 449, FLORES </p>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.116475348514!2d-58.47673748505154!3d-34.62649676621022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9928187d52b%3A0x3405424743244155!2sHelguera%20449%2C%20C1406APG%20CABA!5e0!3m2!1ses!2sar!4v1616503097230!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-	</div>
-
-	<hr>
-
-	<div class="extra-info">
-		<div class="embedsocial-hashtag" data-ref="3cfe816d9dd9dd46ab7250dfc50cc4d4b0e9ede3" ><a class="feed-powered-by-es" href="https://embedsocial.com/products/embedfeed/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
-	</div>
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<a href="https://api.whatsapp.com/send?phone=5491133689738." class="float" target="_blank">
-	<i class="fa fa-whatsapp my-float"></i>
-	</a>
-
+	
 </body>
 </html>
