--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 		</div>
 		
 	</div>
+
+	<div class="center">
+		<iframe src="https://open.spotify.com/embed/playlist/1yd28eIqAx5mvn9sz7WdLb" width="80%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+	</div>
 	
 	<div class="extra-info">
 		<div class="embedsocial-hashtag" data-ref="3cfe816d9dd9dd46ab7250dfc50cc4d4b0e9ede3" ><a class="feed-powered-by-es" href="https://embedsocial.com/products/embedfeed/" target="_blank" title="Powered by EmbedSocial">Powered by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
@@ -55,9 +59,6 @@
 
 	<div class="animation-box">
 		<p class="animation-text a1">
-			LA ACTITUD Y EL PLANETA SE CUIDAN
-		</p>
-		<p class="animation-text a2">
 			LA ACTITUD Y EL PLANETA SE CUIDAN
 		</p>
 	</div>
