--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<p> PRÓXIMAMENTE LOCAL MAYORISTA </p>
 		<p> .HELGUERA PALACE. </p>
 		<p> HELGUERA 449, FLORES </p>
-		<iframe src="https://www.google.com.ar/maps/embed?pb=!1m18!1m12!1m3!1d3283.116475348514!2d-58.47673748505154!3d-34.62649676621022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9928187d52b%3A0x3405424743244155!2sHelguera%20449%2C%20C1406APG%20CABA!5e0!3m2!1ses!2sar!4v1616503097230!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		<iframe src="https://www.google.com.ar/maps/embed?pb=!1m18!1m12!1m3!1d3283.116475348514!2d-58.47673748505154!3d-34.62649676621022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9928187d52b%3A0x3405424743244155!2sHelguera%20449%2C%20C1406APG%20CABA!5e0!3m2!1ses!2sar!4v1616503097230!5m2!1ses!2sar" width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 	</div>
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
